--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="header">
+      <include src="./partials/header.html"></include>
+    </div>
+
+    <div class="main">
+      <include src="./partials/gallery.html"></include>
+    </div>
   </body>
 </html>
